fixed issue with project captions not lining up properly on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -1001,5 +1001,7 @@ color: #777;
 		
 	}
 }
-
+#bringtobot {
+margin-top:71px;
+}
 
